--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             <li>Useful Learning Sites - <a href="https://github.com/pay-pies/usefullearningsites/">Github Repo</a>, <a href="https://pay-pies.neetocode.com/site/qingrui-xie/01JG9A0RKKZ7RV98PKJESCHBG5">Demo</a></li>
             <li>A Guide To Cubing - <a href="https://github.com/pay-pies/guidetocubing">Github Repo</a>, <a href="https://pay-pies.neetocode.com/site/qingrui-xie/01JFJTXMK0JJY6G4M635BKAN1D">Demo</a></li>
             <li>Animal Group Names - <a href="https://github.com/pay-pies/animalnamesydk">Github Repo</a>, <a href="https://pay-pies.neetocode.com/site/qingrui-xie/01JFQZVQ4YEF3VC08B14ZHHMD2">Demo</a></li>
-            <li>How To Vanilla HTML/CSS - <a href="https://github.com/pay-pies/howtovanillahtml">Github Repo</a>, <a href="https://howtovanillahtml.vercel.app/2">Demo</a></li>
+            <li>How To Vanilla HTML/CSS - <a href="https://github.com/pay-pies/howtovanillahtml">Github Repo</a>, <a href="https://howtovanillahtml.vercel.app/">Demo</a></li>
             <li>Countdown To The End Of High Seas - <a href="https://github.com/pay-pies/count_to_the_end">Github Repo</a>, <a href="https://pay-pies.neetocode.com/site/qingrui-xie/01JGPEA1E1GD9DBCMQPCR6J0AB">Demo</a></li>
 
         </ul>
